changed color of header bar

--- a/about.html
+++ b/about.html
@@ -12,10 +12,10 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #dceef7;">
         <div class="container-fluid">
-            <img src="/assets/logo.png" height="50px"/>
-            <a class="navbar-brand" href="#">DOE Curation Group</a>
+            <img src="/assets/logo.png" height="75px"/>
+            <a class="navbar-brand" style="color: black1;" href="#">DOE Curation Group</a>
         </div>
     </nav>
 
@@ -47,16 +47,13 @@
                         researchers, and developers representing the different laboratories to form a working group to
                         identify emerging issues and share expertise in data curation.</p>
                     <h2>Seven Objectives of the DCWG</h2>
-                    <li> Work with DOE OSTI (Office of Scientific and Technical Information) to come up with a more</li>
-                    mature data sharing plan and discovery layer</li>
+                    <li> Work with DOE OSTI (Office of Scientific and Technical Information) to come up with a more mature data sharing plan and discovery layer</li>
                     <li> Research and implement metadata and ontologies that improve discovery and interoperability at the general and specialist/disciplinary level</li>
                     <li> Develop a "Data Curator Toolkit" to help curators asses datasets when they are too large to curate manually</li>
                     <li> Develop best practices for Machine Actionable Data Management Plans that reflect the needs of the laboratories</li>
                     <li> Develop best practices for liaison work and training</li>
                     <li> In collaboration with our partners at Data Curation Network (DCN) create documentation and primers for curators</li>
-                    <li> Machine Learning - Create scripts and/or a proof-of-concept short paper that demonstrates how
-                    </li>
-                    accessing various repository metadata can allow for semantic search capabilities
+                    <li> Machine Learning - Create scripts and/or a proof-of-concept short paper that demonstrates how accessing various repository metadata can allow for semantic search capabilities
                     <h2>Members</h2>
                     • Izzy Mller
                     • Paden Rumsey
