--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #dceef7;">
         <div class="container-fluid">
-            <img src="/assets/logo.png" height="50px"/>
-            <a class="navbar-brand" href="#">DOE Curation Group</a>
+            <img src="/assets/logo.png" height="75px"/>
+            <a class="navbar-brand" style="color: black1;" href="#">DOE Curation Group</a>
         </div>
     </nav>
 
