adjusted header bar font color

--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #dceef7;">
         <div class="container-fluid">
             <img src="/assets/logo.png" height="75px"/>
-            <a class="navbar-brand" style="color: black1;" href="#">DOE Curation Group</a>
+            <a class="navbar-brand" style="color: black;" href="#">DOE Curation Group</a>
         </div>
     </nav>
 
