updates to title bar and name - lab affiliations

--- a/about.html
+++ b/about.html
@@ -11,16 +11,14 @@
 </head>
 
 <body>
-    <!-- Navbar -->
+    <!-- Title bar -->
     <nav class="navbar navbar-expand-lg navbar-dark shadow-md" style="background-color: #dceef7;">
         <div class="container-fluid">
+            <a href="/index.html"><img src="/assets/logo.png" height="75px"></a>
             <div class="title-banner mx-auto">
                 <h1 style="color: black;">Department of Energy Data Curation Working Group</h1>
             </div>
-            <a href="/index.html"><img src="/assets/logo.png" height="75px" />
-            </a>
         </div>
-
     </nav>
 
     <!-- Nav links -->
@@ -33,10 +31,10 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link active" href="/index.html">Home</a>
+                        <a class="nav-link" href="/index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a href="/about.html" class="nav-link ">Group background and objectives</a>
+                        <a href="/about.html" class="nav-link active">Group background and objectives</a>
                     </li>
                 </ul>
             </div>
@@ -62,59 +60,77 @@
             data--from data management planning
             and ensuring early liaison engagement with scientists to establishing data curation standards and tools,
             data literacy materials, and repository best practices as well as citation-level metadata harvesting
-            protocols as informed by the 
-            <a href="https://www.go-fair.org/fair-principles/"> FAIR data principles</a>. 
-            As a strategic, cross-functional decision-making entity, the DCWG identified 
+            protocols as informed by the
+            <a href="https://www.go-fair.org/fair-principles/"> FAIR data principles</a>.
+            As a strategic, cross-functional decision-making entity, the DCWG identified
             <a href="#objectives">7 objectives</a> that members work asynchronously on
             throughout the fiscal year.
             This allows the group to focus on implementing data curation best practices that are adapted to the DOE
             National Laboratories environment. By sharing this model, we hope to share our challenges and successes
-            and receive feedback from the larger data curation community on the efforts of the working group.</p>
+            and receive feedback from the larger data curation community on the efforts of the working group.
+        </p>
         <h3 id="objectives" class="mt-4">Seven Objectives of the DCWG</h2>
-        <li> Work with DOE OSTI (Office of Scientific and Technical Information) to come up with a more mature
-            data sharing plan and discovery layer</li>
-        <li> Research and implement metadata and ontologies that improve discovery and interoperability at the
-            general and specialist/disciplinary level</li>
-        <li> Develop a "Data Curator Toolkit" to help curators asses datasets when they are too large to curate
-            manually</li>
-        <li> Develop best practices for Machine Actionable Data Management Plans that reflect the needs of the
-            laboratories</li>
-        <li> Develop best practices for liaison work and training</li>
-        <li> In collaboration with our partners at Data Curation Network (DCN) create documentation and primers
-            for curators</li>
-        <li> Machine Learning - Create scripts and/or a proof-of-concept short paper that demonstrates how
-            accessing various repository metadata can allow for semantic search capabilities</li>
-        <h3 class="mt-4">Members</h3>
-        Izzy Mller
-        • Paden Rumsey
-        • Ron Stewart
-        • Hannah Hamalainen
-        • Joan Damerow
-        • Amanda Price
-        • Rebecca Rodd
-        • Paige Morkner
-        • Chad Rowan
-        • Lauren Spath Luhring
-        • Meghan Berry
-        • Hannah Collier
-        • Anna Galyon
-        • Olga Kuchar
-        • Alex May
-        • Janine Pino
-        • Tatiyann Singleton
-        • Natalie Barnett
-        • Drew Huitt
-        • Miriam Blake
-        • Aaron Brown
-        • Michael Hofmockel
-        • Trevor Lemos
-        • Jennifer Mendez
-        • Carrie Minerich
-        • Juliane Schneider
-        • Shannon Sheridan
-        • Ian Smith
-        • Rose Borden
-        • Karen Holt
+            <li> Work with DOE OSTI (Office of Scientific and Technical Information) to come up with a more mature
+                data sharing plan and discovery layer</li>
+            <li> Research and implement metadata and ontologies that improve discovery and interoperability at the
+                general and specialist/disciplinary level</li>
+            <li> Develop a "Data Curator Toolkit" to help curators asses datasets when they are too large to curate
+                manually</li>
+            <li> Develop best practices for Machine Actionable Data Management Plans that reflect the needs of the
+                laboratories</li>
+            <li> Develop best practices for liaison work and training</li>
+            <li> In collaboration with our partners at Data Curation Network (DCN) create documentation and primers
+                for curators</li>
+            <li> Machine Learning - Create scripts and/or a proof-of-concept short paper that demonstrates how
+                accessing various repository metadata can allow for semantic search capabilities</li>
+            <h3 class="mt-4">Members</h3>
+            <p>
+                Izzy Mller <sup>[1]</sup>
+                • Paden Rumsey <sup>[2]</sup>
+                • Ron Stewart <sup>[2]</sup>
+                • Hannah Hamalainen <sup>[3]</sup>
+                • Joan Damerow <sup>[4]</sup>
+                • Amanda Price <sup>[5]</sup>
+                • Rebecca Rodd <sup>[5]</sup>
+                • Paige Morkner <sup>[6]</sup>
+                • Chad Rowan <sup>[6]</sup>
+                • Lauren Spath Luhring <sup>[7]</sup>
+                • Meghan Berry <sup>[8]</sup>
+                • Hannah Collier <sup>[8]</sup>
+                • Anna Galyon <sup>[8]</sup>
+                • Olga Kuchar <sup>[8]</sup>
+                • Alex May <sup>[8]</sup>
+                • Janine Pino <sup>[8]</sup>
+                • Tatiyann Singleton <sup>[8]</sup>
+                • Natalie Barnett <sup>[9]</sup>
+                • Drew Huitt <sup>[9]</sup>
+                • Miriam Blake <sup>[10]</sup>
+                • Aaron Brown <sup>[10]</sup>
+                • Michael Hofmockel <sup>[10]</sup>
+                • Trevor Lemos <sup>[10]</sup>
+                • Jennifer Mendez <sup>[10]</sup>
+                • Carrie Minerich <sup>[10]</sup>
+                • Juliane Schneider <sup>[10]</sup>
+                • Shannon Sheridan <sup>[10]</sup>
+                • Ian Smith <sup>[10]</sup>
+                • Rose Borden <sup>[11]</sup>
+                • Karen Holt <sup>[11]</sup>
+            </p>
+            <p>
+            <ol>
+                <li>Argonne National Laboratory</li>
+                <li>Idaho National Laboratory</li>
+                <li>Los Alamos National Lab</li>
+                <li>Lawrence Berkeley National Laboratory</li>
+                <li>Lawrence Livermore National Laboratory</li>
+                <li>National Energy Technology Laboratory</li>
+                <li>National Renewable Energy Laboratory</li>
+                <li>Oak Ridge National Laboratory</li>
+                <li>Office of Scientific and Technical Information</li>
+                <li>Pacific Northwest National Laboratory</li>
+                <li>Sandia National Laboratories</li>
+            </ol>
+            </p>
     </main>
     <!-- Footer Banner -->
     <div class="footer-banner shadow-lg">
