--- a/index.html
+++ b/index.html
@@ -11,16 +11,14 @@
 </head>
 
 <body>
-    <!-- Navbar -->
+    <!-- Title bar -->
     <nav class="navbar navbar-expand-lg navbar-dark shadow-md" style="background-color: #dceef7;">
         <div class="container-fluid">
+            <a href="/index.html"><img src="/assets/logo.png" height="75px"></a>
             <div class="title-banner mx-auto">
                 <h1 style="color: black;">Department of Energy Data Curation Working Group</h1>
             </div>
-            <a href="/index.html"><img src="/assets/logo.png" height="75px" />
-            </a>
         </div>
-
     </nav>
 
     <!-- Nav links -->
@@ -44,14 +42,15 @@
     </nav>
     <!-- Content Area -->
     <main class="p-5">
-        <h1 class="text-center"><em>Addressing the full lifecycle of data across the DOE National Laboratories
-                complex.</em></h1>
+        <h1 class="text-center">
+            <em>Addressing the full lifecycle of data across the DOE National Laboratories complex.</em>
+        </h1>
         <h3 class="mt-4">Outputs</h3>
-        <p>To access copies of publications, primers, and liaison material, visit the <a
-                href="https://osf.io/4kgjm/">DCWG
-                OSF page</a>.</p>
+        <p>To access copies of publications, primers, and liaison material, visit the
+            <a href="https://osf.io/4kgjm/">DCWG OSF page</a>.
+        </p>
         <h3 class="mt-4">Interested in participating?</h3>
-        <h4> Contact TBD </h4>
+        <h5> Contact TBD </h5>
         <h3 class="mt-4">Participating Laboratories</h3>
         <ul>
             <li>Pacific Northwest National Laboratory</li>
