--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </p>
         <h3 class="mt-4">Interested in participating?</h3>
         <h5> Contact TBD </h5>
-        <h3 class="mt-4">Participating Laboratories</h3>
+        <h3 class="mt-4">Participating Laboratories and DOE Offices</h3>
         <ul>
             <li>Pacific Northwest National Laboratory</li>
             <li>Oak Ridge National Laboratory</li>
