--- a/about.html
+++ b/about.html
@@ -83,41 +83,10 @@
                 for curators</li>
             <li> Machine Learning - Create scripts and/or a proof-of-concept short paper that demonstrates how
                 accessing various repository metadata can allow for semantic search capabilities</li>
-            <h3 class="mt-4">Members</h3>
+            <h3 class="mt-4">Member Labs</h3>
+           
             <p>
-                Izzy Mller <sup>[1]</sup>
-                • Paden Rumsey <sup>[2]</sup>
-                • Ron Stewart <sup>[2]</sup>
-                • Hannah Hamalainen <sup>[3]</sup>
-                • Joan Damerow <sup>[4]</sup>
-                • Amanda Price <sup>[5]</sup>
-                • Rebecca Rodd <sup>[5]</sup>
-                • Paige Morkner <sup>[6]</sup>
-                • Chad Rowan <sup>[6]</sup>
-                • Lauren Spath Luhring <sup>[7]</sup>
-                • Meghan Berry <sup>[8]</sup>
-                • Hannah Collier <sup>[8]</sup>
-                • Anna Galyon <sup>[8]</sup>
-                • Olga Kuchar <sup>[8]</sup>
-                • Alex May <sup>[8]</sup>
-                • Janine Pino <sup>[8]</sup>
-                • Tatiyann Singleton <sup>[8]</sup>
-                • Natalie Barnett <sup>[9]</sup>
-                • Drew Huitt <sup>[9]</sup>
-                • Miriam Blake <sup>[10]</sup>
-                • Aaron Brown <sup>[10]</sup>
-                • Michael Hofmockel <sup>[10]</sup>
-                • Trevor Lemos <sup>[10]</sup>
-                • Jennifer Mendez <sup>[10]</sup>
-                • Carrie Minerich <sup>[10]</sup>
-                • Juliane Schneider <sup>[10]</sup>
-                • Shannon Sheridan <sup>[10]</sup>
-                • Ian Smith <sup>[10]</sup>
-                • Rose Borden <sup>[11]</sup>
-                • Karen Holt <sup>[11]</sup>
-            </p>
-            <p>
-            <ol>
+            <ul>
                 <li>Argonne National Laboratory</li>
                 <li>Idaho National Laboratory</li>
                 <li>Los Alamos National Lab</li>
@@ -129,7 +98,7 @@
                 <li>Office of Scientific and Technical Information</li>
                 <li>Pacific Northwest National Laboratory</li>
                 <li>Sandia National Laboratories</li>
-            </ol>
+            </ul>
             </p>
     </main>
     <!-- Footer Banner -->
