--- a/about.html
+++ b/about.html
@@ -83,7 +83,7 @@
                 for curators</li>
             <li> Machine Learning - Create scripts and/or a proof-of-concept short paper that demonstrates how
                 accessing various repository metadata can allow for semantic search capabilities</li>
-            <h3 class="mt-4">Member Labs</h3>
+            <h3 class="mt-4">Laboratories with participating members</h3>
            
             <p>
             <ul>
