--- a/index.html
+++ b/index.html
@@ -51,12 +51,20 @@
         </p>
         <h3 class="mt-4">Interested in participating?</h3>
         <h5> Contact TBD </h5>
-        <h3 class="mt-4">Participating Laboratories and DOE Offices</h3>
+        <h3 class="mt-4">Laboratories and DOE Offices with Participating Members</h3>
         <ul>
             <li>Pacific Northwest National Laboratory</li>
             <li>Oak Ridge National Laboratory</li>
             <li>Lawrence Livermore National Laboratory</li>
             <li>DOE Office of Scientific and Technical Information</li>
+            <li>Argonne National Laboratory</li>
+            <li>Idaho National Laboratory</li>
+            <li>Los Alamos National Lab</li>
+            <li>Lawrence Berkeley National Laboratory</li>
+            <li>Lawrence Livermore National Laboratory</li>
+            <li>National Energy Technology Laboratory</li>
+            <li>National Renewable Energy Laboratory</li>
+            <li>Sandia National Laboratories</li>
         </ul>
     </main>
     <!-- Footer Banner -->
