--- a/index.html
+++ b/index.html
@@ -45,9 +45,7 @@
         <h1 class="text-center">
             <em>Addressing the full lifecycle of data across the DOE National Laboratories complex.</em>
         </h1>
-        <h3 class="mt-4">Outputs</h3>
-        <p>To access copies of publications, primers, and liaison material, visit the
-            <a href="https://osf.io/4kgjm/">DCWG OSF page</a>.
+           <p>DCWG is a cross-organizational DOE community advancing guidance, practices, and alignment to make data reusable across its full lifecycle.
         </p>
         <h3 class="mt-4">Interested in participating?</h3>
         <h5> Contact TBD </h5>
