--- a/index.html
+++ b/index.html
@@ -45,24 +45,32 @@
         <h1 class="text-center">
             <em>Addressing the full lifecycle of data across the DOE National Laboratories complex.</em>
         </h1>
-           <p>DCWG is a cross-organizational DOE community advancing guidance, practices, and alignment to make data reusable across its full lifecycle.
+        
+           <pstyle="text-align: center;">DCWG is a cross-organizational DOE community advancing guidance, practices, and alignment to make data reusable across its full lifecycle.
         </p>
+
+         <a href="https://forms.office.com/g/L9sDFEZwQC" style="background-color: #28a745; color: white; padding: 12px 24px; text-decoration: none; border-radius: 8px; font-family: Arial, sans-serif; font-weight: bold; display: inline-block;">Button Text</a>
+               
+        <center>  <img src="doedcwg_gitpage_image.png" width="300"></center>
         <h3 class="mt-4">Interested in participating?</h3>
         <h5> Contact TBD </h5>
         <h3 class="mt-4">Laboratories and DOE Offices with Participating Members</h3>
         <ul>
-            <li>Pacific Northwest National Laboratory</li>
-            <li>Oak Ridge National Laboratory</li>
-            <li>Lawrence Livermore National Laboratory</li>
-            <li>DOE Office of Scientific and Technical Information</li>
-            <li>Argonne National Laboratory</li>
-            <li>Idaho National Laboratory</li>
-            <li>Los Alamos National Lab</li>
-            <li>Lawrence Berkeley National Laboratory</li>
-            <li>Lawrence Livermore National Laboratory</li>
-            <li>National Energy Technology Laboratory</li>
-            <li>National Renewable Energy Laboratory</li>
-            <li>Sandia National Laboratories</li>
+          <li>Argonne National Laboratory (ANL)</li>
+<li>DOE Office of Scientific and Technical Information (OSTI)</li>
+<li>Idaho National Laboratory (INL)</li>
+<li>Lawrence Berkeley National Laboratory (LBNL)</li>
+<li>Lawrence Livermore National Laboratory (LLNL)</li>
+<li>Los Alamos National Laboratory (LANL)</li>
+<li>National Energy Technology Laboratory (NETL)</li>
+<li>National Laboratory of the Rockies (NLR)</li>
+<li>Oak Ridge National Laboratory (ORNL)</li>
+<li>Pacific Northwest National Laboratory (PNNL)</li>
+<li>Princeton Plasma Physics Laboratory (PPPL)</li>
+<li>Sandia National Laboratories (SNL)</li>
+<li>Savannah River National Laboratory (SRNL)</li>
+<li>SLAC National Accelerator Laboratory (SLAC)</li>
+<li>Thomas Jefferson National Laboratory (JLAB)</li>
         </ul>
     </main>
     <!-- Footer Banner -->
