--- a/index.html
+++ b/index.html
@@ -46,14 +46,19 @@
             <em>Addressing the full lifecycle of data across the DOE National Laboratories complex.</em>
         </h1>
         
-           <pstyle="text-align: center;">DCWG is a cross-organizational DOE community advancing guidance, practices, and alignment to make data reusable across its full lifecycle.
-        </p>
+<br><br>
 
-         <a href="https://forms.office.com/g/L9sDFEZwQC" style="background-color: #28a745; color: white; padding: 12px 24px; text-decoration: none; border-radius: 8px; font-family: Arial, sans-serif; font-weight: bold; display: inline-block;">Button Text</a>
-               
-        <center>  <img src="doedcwg_gitpage_image.png" width="300"></center>
-        <h3 class="mt-4">Interested in participating?</h3>
-        <h5> Contact TBD </h5>
+<p style="text-align: center;">DCWG is a cross-organizational DOE community advancing guidance, practices, and alignment to make data reusable across its full lifecycle.</p>
+<br><br>
+
+<center>
+<a href="https://forms.office.com/g/L9sDFEZwQC" style="background-color: #2C6235; color: white; padding: 12px 24px; text-decoration: none; border-radius: 8px; font-family: Arial, sans-serif; font-weight: bold; display: inline-block;">Join the DCWG!</a>
+</center>
+<br><br>
+
+<center>
+<img src="doedcwg_gitpage_image.png" width="300">
+</center>
         <h3 class="mt-4">Laboratories and DOE Offices with Participating Members</h3>
         <ul>
           <li>Argonne National Laboratory (ANL)</li>
